replaced new Integer with valueof